    @startuml
'https://plantuml.com/class-diagram

class ViewGradesUi{
}

class ProfileController{
+getStudentProfiles()
}

class TeacherRegistrationController{
+addTeacherRegistration(teacherRegistration)
+saveTeacherRegistration(teacherRegistration)
+getTeacherRegistrations()
}

class TeacherRegistrationService{
+addNewTeacherRegistration(teacherRegistration)
+getAll()}


class ProfileService{
+getStudentProfiles()
+getAll()
}


class PersistenceContext{
+repositories()
}

class RepositoryFactory{
+create()
+newTransactionalContext()
+exams()
+teacherRegistrations()
+create(TransactionalContext ctx)
}

database ProfileRepository{
}

database TeacherRegistrationRepository{
}



class TeacherRegistration{
}



class TransactionalContext{
+beginTransaction()
+commit()
}


ViewGradesUi --> ProfileController
ViewGradesUi --> TeacherRegistrationController
ProfileService-->PersistenceContext
ProfileService-->TransactionalContext
ProfileService-->PersistenceContext
ProfileService-->TransactionalContext
ProfileController-->ProfileService
ProfileService --> ProfileRepository
TeacherRegistrationService-->PersistenceContext
TeacherRegistrationService-->TransactionalContext
TeacherRegistrationService --> TeacherRegistration
TeacherRegistrationController-->TeacherRegistrationService
TeacherRegistrationService --> TeacherRegistrationRepository

PersistenceContext-->RepositoryFactory

RepositoryFactory-->ProfileRepository
RepositoryFactory-->TeacherRegistrationRepository

@enduml